# LOWTHD

./: .gitignore  README.md  TARGETS.md
.github/workflows/: build.yml
Builds/macOS/Low THD Tape Sim.component/Contents/: Info.plist
Builds/macOS/Low THD Tape Sim.component/Contents/MacOS/: Low THD Tape Sim
Builds/macOS/Low THD Tape Sim.vst3/Contents/: Info.plist
Builds/macOS/Low THD Tape Sim.vst3/Contents/MacOS/: Low THD Tape Sim
Builds/macOS/Low THD Tape Sim.vst3/Contents/Resources/: moduleinfo.json
Builds/macOS/Low THD Tape Sim.vst3/Contents/_CodeSignature/: CodeResources
Plugin/: CMakeLists.txt
Plugin/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: BiasShielding.cpp  BiasShielding.h  HybridTapeProcessor.cpp  HybridTapeProcessor.h  JilesAthertonCore.h  MachineEQ.cpp  MachineEQ.h  PreEmphasis.cpp  PreEmphasis.h
Tests/: CMakeLists.txt  Test_CCIR_Curve.cpp  Test_Comprehensive.cpp  Test_Crosstalk.cpp  Test_CurveShape.cpp  Test_DispersiveAllpass.cpp  Test_Emphasis_Null.cpp  Test_FrequencyResponse.cpp  Test_FullProcessorTHD.cpp  Test_HFPhaseShift.cpp  Test_HarmonicBalance.cpp  Test_HeadBumpMod.cpp  Test_JABlendSweep.cpp  Test_MachineEQ.cpp  Test_ParameterSearch.cpp  Test_PhaseCoherence.cpp  Test_RealismAnalysis.cpp  Test_SignalFlowSuite.cpp  Test_Stability.cpp  Test_Stereo.cpp  Test_THDAccuracy.cpp  Test_THDCurve.cpp  Test_Transparency.cpp  param_search.cpp  plot_eq_curves.py  run_all_tests.sh  test_ampex_tuning.cpp  test_harmonics.cpp  test_machine_eq.cpp  test_parallel_phase.cpp  test_studer_tuning.cpp
